--- a/web/packages/sequence/CHANGELOG
+++ b/web/packages/sequence/CHANGELOG
@@ -1,1 +1,23 @@
-Focus43
+<!-- CONTACT FORM HTML: action="/ccm/sequence/contact_form" -->
+<form name="contactForm" ng-controller="CtrlContactForm" ng-submit="submitHandler($event)" role="form" action="<?php echo URL::route(array('/contact_form', 'sequence')); ?>">
+    <div class="row">
+        <div class="col-sm-6 form-group">
+            <label class="sr-only">Name</label>
+            <input required ng-model="form_data.name" type="text" class="form-control" placeholder="Name" />
+        </div>
+        <div class="col-sm-6 form-group">
+            <label class="sr-only">Email</label>
+            <input required ng-model="form_data.email" type="text" class="form-control" placeholder="Email" />
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12 form-group">
+            <textarea ng-model="form_data.message" class="form-control" placeholder="Message" rows="5"></textarea>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12 form-group">
+            <button ng-disabled="isDisabled()" type="submit" class="btn btn-default">Send</button>
+        </div>
+    </div>
+</form>
